# python-htmx-lambda-base

./: .gitignore  README.md  deploys.py  pyproject.toml
.github/workflows/: check.yml  deploy.yml  prod_deploy.yml
infrastructure/: web.py
lib/components/: __init__.py  banner.py  session.py
lib/core/: __init__.py  cookie.py  dispatch.py  return_.py  threading.py
scripts/: build.sh
src/: style.css  test.html
tests/: conftest.py
tests/core_tests/: test_cookie.py  test_dispatch.py  test_return.py  test_threading.py
tests/test_components/: test_banner.py  test_session.py
tests/test_functions/: test_log.py
