[project]
name = "python-htmx-lambda-base"
version = "0.1.0"
description = "Stub project for setting up a Python, HTMX project hosted on AWS lambda"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-xray-sdk>=2.15.0",
    "basilico>=0.1.0",
    "boto3>=1.42.30",
    "boto3-stubs[dynamodb,sns]>=1.42.30",
    "simplelens>=1.2.1",
]

[dependency-groups]
infrastructure = [
    "aws-cdk-lib>=2.235.0",
    "constructs>=10.4.5",
]
dev = [
    "invoke>=2.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=lib --cov-report=term-missing --cov-fail-under 100"

[tool.ty]
environment.python-version = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]